--- a/Applications/4-natours/package.json
+++ b/Applications/4-natours/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
+    "start:prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
   "author": "Mohamed Emara",
@@ -17,5 +18,8 @@
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
