--- a/Applications/4-natours/package.json
+++ b/Applications/4-natours/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "mongoose": "^5.13.20",
     "nodemon": "^3.0.1",
