--- a/Applications/4-natours/package.json
+++ b/Applications/4-natours/package.json
@@ -12,6 +12,7 @@
   "author": "Mohamed Emara",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
