--- a/Applications/4-natours/package.json
+++ b/Applications/4-natours/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.20",
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
