--- a/Applications/4-natours/package.json
+++ b/Applications/4-natours/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.20",
+    "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
     "slugify": "^1.6.6",
     "validator": "^13.11.0"
