--- a/Applications/4-natours/package.json
+++ b/Applications/4-natours/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.20",
     "nodemailer": "^6.9.6",
